--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -114,7 +114,6 @@ fieldset {
 		margin: 0 0 0.5em 0;
 	}
 	fieldset.text-fields ol > li {
-		list-style: none;
 		margin-bottom: 0.5em;
 	}
 	fieldset.text-fields.inline ol > li {
@@ -134,10 +133,11 @@ fieldset {
 	fieldset.text-fields label + textarea {
 		vertical-align: top;
 	}
-
-	fieldset.cb-rb-fields ol,
-	fieldset.cb-rb-fields ol > li {
+	fieldset.cb-rb-fields ol {
 		list-style: none;
+		margin: 0 0 0.5em 0;
+	}
+	fieldset.cb-rb-fields ol > li {
 		margin-bottom: 0.5em;
 	}
 	fieldset.cb-rb-fields.inline ol > li {
