--- a/assets/styles/custom-select.css
+++ b/assets/styles/custom-select.css
@@ -22,6 +22,7 @@ select.custom-select.replaced {
 		color: #fff;
 		font-size: 16px;
 		line-height: 24px;
+		text-overflow: ellipsis;
 		white-space: nowrap;
 		overflow: hidden;
 		position: absolute;
